<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="avatarSettings"
        android:title="@string/avatar_settings"
        android:icon="@drawable/account_circle_icon"/>

    <Preference
        android:icon="@drawable/edit_icon"
        android:key="informationSettings"
        android:title="@string/information_settings"/>

<!--    <Preference
        android:icon="@drawable/email_icon"
        android:key="emailSettings"
        android:title="@string/email_settings"/>-->

    <Preference
        android:icon="@drawable/password_icon"
        android:key="passwordSettings"
        android:title="@string/password_settings"/>

    <Preference
        android:icon="@drawable/delete_icon"
        android:key="deleteAccount"
        android:title="@string/delete_account"/>

</PreferenceScreen>