<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.PasswordResetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/passwordResetButton_password_reset_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_reset_send"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText_password_reset_fragment"
            app:layout_constraintStart_toStartOf="@+id/emailEditText_password_reset_fragment"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText_password_reset_fragment" />

        <EditText
            android:id="@+id/emailEditText_password_reset_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_input_selector"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline18"
            tools:ignore="TextFields" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <TextView
            android:id="@+id/hintTextView_password_reset_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/password_reset_hint"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText_password_reset_fragment"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText_password_reset_fragment"
            app:layout_constraintStart_toStartOf="@+id/emailEditText_password_reset_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>