<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.EmailChangeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_email_change_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImageView_email_change_fragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow_icon" />

        <TextView
            android:id="@+id/titleTextView_email_change_fragment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/email_settings"
            android:layout_marginStart="30dp"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_email_change_fragment" />

    <TextView
        android:id="@+id/actualEmailTextView_email_change_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:background="@drawable/text_input_selector"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/new_email"
        app:layout_constraintEnd_toEndOf="@+id/actualEmailTextView_email_change_fragment"
        app:layout_constraintStart_toStartOf="@+id/actualEmailTextView_email_change_fragment"
        app:layout_constraintTop_toBottomOf="@+id/actualEmailTextView_email_change_fragment" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/retype_email"
        app:layout_constraintEnd_toEndOf="@+id/newEmailEditTextText_email_change_fragment"
        app:layout_constraintStart_toStartOf="@+id/newEmailEditTextText_email_change_fragment"
        app:layout_constraintTop_toBottomOf="@+id/newEmailEditTextText_email_change_fragment" />

    <Button
        android:id="@+id/saveButton_email_change_fragment"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/retypeNewEmailEditText_email_change_fragment"
        app:layout_constraintStart_toStartOf="@+id/retypeNewEmailEditText_email_change_fragment"
        app:layout_constraintTop_toBottomOf="@+id/retypeNewEmailEditText_email_change_fragment" />

    <EditText
        android:id="@+id/newEmailEditTextText_email_change_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:background="@drawable/text_input_selector"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/retypeNewEmailEditText_email_change_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:background="@drawable/text_input_selector"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>