<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.AvatarChangeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_avatar_change_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImageView_avatar_change_fragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow_icon" />

        <TextView
            android:id="@+id/titleTextView_avatar_change_fragment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/avatar_settings"
            android:layout_marginStart="30dp"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarChangeImageView_avatar_change_fragment"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="?colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_avatar_change_fragment"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/changeAvatarButton_avatar_change_fragment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/change_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarChangeImageView_avatar_change_fragment" />

    <Button
        android:id="@+id/removeAvatarButton_avatar_change_fragment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/remove_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/changeAvatarButton_avatar_change_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>